--- a/index.html
+++ b/index.html
@@ -167,18 +167,39 @@
                 <section id="slider">
                     <ul>
                         <li>
-                            <div class="slide01">
+                            <div class="slide s1">
                                 <h3>
-                                    젊은 모색 2023 : 미술관을 위한 주석
+                                    [서울] 젊은 모색 2023: 미술관을 위한 주석
                                 </h3>
                                 <p>2023.04.27-2023.09.10</p>
                                 <div class="img-box">
-                                    <img src="./imgs/slider-1.png" alt="젊은 모색 2023 : 미술관을 위한 주석"  class="slideimg-1">
+                                    <img src="./imgs/slider-1.png" alt="젊은 모색 2023 : 미술관을 위한 주석"  class="slideimg">
                                 </div>
                             </div>
                         </li>
-                        <li></li>
-                        <li></li>
+                        <li>
+                            <div class="slide s2">
+                                <h3>
+                                    [덕수궁] 가장 진지한 고백: 장진욱 회고전
+                                </h3>
+                                <p>2023.04.27-2023.09.10</p>
+                                <div class="img-box">
+                                    <img src="./imgs/slider2.png" alt="젊은 모색 2023 : 미술관을 위한 주석"  class="slideimg">
+                                </div>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="slide s3">
+                                <h3>
+                                    [서울]
+                                    백 투 더 퓨처: 한국 현대미술의 동시대성 탐험기 
+                                </h3>
+                                <p>2023.04.27-2023.09.10</p>
+                                <div class="img-box">
+                                    <img src="./imgs/slider-1.png" alt="젊은 모색 2023 : 미술관을 위한 주석"  class="slideimg">
+                                </div>
+                            </div>
+                        </li>
                     </ul>
                 </section>
             </div> 
@@ -341,14 +362,14 @@
                             전시모두보기
                             <svg width="7" height="15" viewBox="0 0 7 15" fill="none" xmlns="http://www.w3.org/2000/svg">
                                 <path d="M1 14.5L6 7.5L1 0.500001" stroke="#DBDBDB"/>
-                                </svg>
+                            </svg>
                         </button>
                     </div>
                    <div class="exhibi-battom">
                     <ul class="exhibi-list">
                         <li>
                             <a href="">
-                                <img src="./imgs/exhibition-post1.png" alt="이신자, 실로 그리다">
+                                <img class="exhibipost" src="./imgs/exhibition-post1.png" alt="이신자, 실로 그리다">
                                 <div class="exhibi-txt-box">
                                     <ul>
                                         <li class="exhibi-locatio">
@@ -377,7 +398,7 @@
                         </li>
                         <li>
                             <a href="">
-                                <img src="./imgs/exhibition-post1.png" alt="이신자, 실로 그리다">
+                                <img class="exhibipost" src="./imgs/exhibition-post1.png" alt="이신자, 실로 그리다">
                                 <div class="exhibi-txt-box">
                                     <ul>
                                         <li class="exhibi-locatio">
@@ -406,7 +427,7 @@
                         </li>
                         <li>
                             <a href="">
-                                <img src="./imgs/exhibition-post1.png" alt="이신자, 실로 그리다">
+                                <img class="exhibipost" src="./imgs/exhibition-post1.png" alt="이신자, 실로 그리다">
                                 <div class="exhibi-txt-box">
                                     <ul>
                                         <li class="exhibi-locatio">
@@ -435,7 +456,7 @@
                         </li>
                         <li>
                             <a href="">
-                                <img src="./imgs/exhibition-post1.png" alt="이신자, 실로 그리다">
+                                <img class="exhibipost" src="./imgs/exhibition-post1.png" alt="이신자, 실로 그리다">
                                 <div class="exhibi-txt-box">
                                     <ul>
                                         <li class="exhibi-locatio">
@@ -477,28 +498,28 @@
                     <ul class="collection-list">
                         <li>
                             <a href="">
-                                <img src="./imgs/collection01.png" alt="소장품 이미지">
+                                <img class="collectimg" src="./imgs/collection1.png" alt="소장품 이미지">
                                 <h4 class="collection-ttl">국내현대미술관 소장품 300</h4>
                                 <p class="collection-caption">1910년대-1920년대</p>
                             </a>
                         </li>
                         <li>
                             <a href="">
-                                <img src="./imgs/collection02.png" alt="소장품 이미지">
+                                <img src="./imgs/collection2.png" alt="소장품 이미지">
                                 <h4 class="collection-ttl">국내현대미술관 소장품 300</h4>
                                 <p class="collection-caption">1910년대-1920년대</p>
                             </a>
                         </li>
                         <li>
                             <a href="">
-                                <img src="./imgs/collection03.png" alt="소장품 이미지">
+                                <img src="./imgs/collection3.png" alt="소장품 이미지">
                                 <h4 class="collection-ttl">국내현대미술관 소장품 300</h4>
                                 <p class="collection-caption">1910년대-1920년대</p>
                             </a>
                         </li>
                         <li>
                             <a href="">
-                                <img src="./imgs/collection04.png" alt="소장품 이미지">
+                                <img src="./imgs/collection4.png" alt="소장품 이미지">
                                 <h4 class="collection-ttl">국내현대미술관 소장품 300</h4>
                                 <p class="collection-caption">1910년대-1920년대</p>
                             </a>
