--- a/index.html
+++ b/index.html
@@ -249,75 +249,163 @@
                     
                     <ul class="intro-mn">
                         <li>
-                            <a href="">
-                                서울
+                            서울
                                 <svg width="19" height="14" viewBox="0 0 19 14" fill="none" xmlns="http://www.w3.org/2000/svg">
                                     <path d="M12 13L18 7M18 7L12 1M18 7L0 7" stroke=""/>
-                                    </svg>
-                            </a>
-
+                                </svg>
                         </li>
                         <li>
-                            <a href="">
-                                과천
-                                <svg width="19" height="14" viewBox="0 0 19 14" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                    <path d="M12 13L18 7M18 7L12 1M18 7L0 7" stroke=""/>
-                                    </svg>
-
-                            </a>
+                            과천
+                            <svg width="19" height="14" viewBox="0 0 19 14" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <path d="M12 13L18 7M18 7L12 1M18 7L0 7" stroke=""/>
+                                </svg>
                         </li>
                         <li>
-                            <a href="">
-                                덕수궁
+                            덕수궁
                                 <svg width="19" height="14" viewBox="0 0 19 14" fill="none" xmlns="http://www.w3.org/2000/svg">
                                     <path d="M12 13L18 7M18 7L12 1M18 7L0 7" stroke=""/>
                                     </svg>
-                            </a>
                         </li>
                         <li>
-                            <a href="">
-                                청주
-                                <svg width="19" height="14" viewBox="0 0 19 14" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                    <path d="M12 13L18 7M18 7L12 1M18 7L0 7" stroke=""/>
-                                    </svg>
-                            </a>
+                            청주
+                            <svg width="19" height="14" viewBox="0 0 19 14" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <path d="M12 13L18 7M18 7L12 1M18 7L0 7" stroke=""/>
+                                </svg>
                         </li>
                     </ul>
                     <ul class="intro-contents">
                         <li>
-                            <div class="intro-textbox">
-                                <div class="intro-txt">
-                                    <h3>서울</h3>
-                                    <p>도시와 역사와 동시 대미술이 호흡하는 열린 미술관</p>
+                            <div class="introcon-wrap">
+                                <div class="intro-textbox">
+                                    <div class="intro-txt">
+                                        <h3>서울</h3>
+                                        <p>도시와 역사와 동시 대미술이 호흡하는 열린 미술관</p>
+                                    </div>
+                                    <ul class="museum-contents">
+                                        <li>
+                                            <p>전시</p><p>필름앤비디오</p>
+                                        </li>
+                                        <li>
+                                            <p>이벤트</p><p>다원예술</p><p>교육</p>
+                                        </li>
+                                    </ul>
+                                    <div class="using-time">
+                                        <h3>관람시간</h3>
+                                    </div>
+                                    <ul class="using-time-list">
+                                        <li>
+                                            월요일,화요일, 목요일,금요일, 일요일   10:00-18:00
+                                        </li>
+                                        <li>
+                                            수요일,토요일 야간개장 10:00 - 21:00
+                                        </li>
+                                    </ul>
                                 </div>
-                                <ul class="museum-contents">
-                                    <li>
-                                        <p>전시</p><p>필름앤비디오</p>
-                                    </li>
-                                    <li>
-                                        <p>이벤트</p><p>다원예술</p><p>교육</p>
-                                    </li>
-                                </ul>
-                                <div class="using-time">
-                                    <h3>관람시간</h3>
-                                </div>
-                                <ul class="using-time-list">
-                                    <li>
-                                        월요일,화요일, 목요일,금요일, 일요일   10:00-18:00
-                                    </li>
-                                    <li>
-                                        수요일,토요일 야간개장 10:00 - 21:00
-                                    </li>
-                                </ul>
-                            </div>
-                        <div class="intro-imgbox">
-                            <img src="./imgs/seoul.png" alt="서울 현대미술과 이미지">
+                                <div class="intro-imgbox">
+                                    <img src="./imgs/seoul.png" alt="서울 현대미술과 이미지">
 
-                        </div>
+                                </div>
+                            </div>    
                         </li>
-                        <li></li>
-                        <li></li>
-                        <li></li>
+                        <li>
+                            <div class="introcon-wrap">
+                                <div class="intro-textbox">
+                                    <div class="intro-txt">
+                                        <h3>과천</h3>
+                                        <p>도시와 역사와 동시 대미술이 호흡하는 열린 미술관</p>
+                                    </div>
+                                    <ul class="museum-contents">
+                                        <li>
+                                            <p>전시</p><p>필름앤비디오</p>
+                                        </li>
+                                        <li>
+                                            <p>이벤트</p><p>다원예술</p><p>교육</p>
+                                        </li>
+                                    </ul>
+                                    <div class="using-time">
+                                        <h3>관람시간</h3>
+                                    </div>
+                                    <ul class="using-time-list">
+                                        <li>
+                                            월요일,화요일, 목요일,금요일, 일요일   10:00-18:00
+                                        </li>
+                                        <li>
+                                            수요일,토요일 야간개장 10:00 - 21:00
+                                        </li>
+                                    </ul>
+                                </div>
+                                <div class="intro-imgbox">
+                                    <img src="./imgs/seoul.png" alt="서울 현대미술과 이미지">
+
+                                </div>
+                            </div>    
+                        </li>
+                        <li>
+                            <div class="introcon-wrap">
+                                <div class="intro-textbox">
+                                    <div class="intro-txt">
+                                        <h3>덕수궁</h3>
+                                        <p>도시와 역사와 동시 대미술이 호흡하는 열린 미술관</p>
+                                    </div>
+                                    <ul class="museum-contents">
+                                        <li>
+                                            <p>전시</p><p>필름앤비디오</p>
+                                        </li>
+                                        <li>
+                                            <p>이벤트</p><p>다원예술</p><p>교육</p>
+                                        </li>
+                                    </ul>
+                                    <div class="using-time">
+                                        <h3>관람시간</h3>
+                                    </div>
+                                    <ul class="using-time-list">
+                                        <li>
+                                            월요일,화요일, 목요일,금요일, 일요일   10:00-18:00
+                                        </li>
+                                        <li>
+                                            수요일,토요일 야간개장 10:00 - 21:00
+                                        </li>
+                                    </ul>
+                                </div>
+                                <div class="intro-imgbox">
+                                    <img src="./imgs/seoul.png" alt="서울 현대미술과 이미지">
+
+                                </div>
+                            </div>    
+                        </li>
+                        <li>
+                            <div class="introcon-wrap">
+                                <div class="intro-textbox">
+                                    <div class="intro-txt">
+                                        <h3>청주</h3>
+                                        <p>도시와 역사와 동시 대미술이 호흡하는 열린 미술관</p>
+                                    </div>
+                                    <ul class="museum-contents">
+                                        <li>
+                                            <p>전시</p><p>필름앤비디오</p>
+                                        </li>
+                                        <li>
+                                            <p>이벤트</p><p>다원예술</p><p>교육</p>
+                                        </li>
+                                    </ul>
+                                    <div class="using-time">
+                                        <h3>관람시간</h3>
+                                    </div>
+                                    <ul class="using-time-list">
+                                        <li>
+                                            월요일,화요일, 목요일,금요일, 일요일   10:00-18:00
+                                        </li>
+                                        <li>
+                                            수요일,토요일 야간개장 10:00 - 21:00
+                                        </li>
+                                    </ul>
+                                </div>
+                                <div class="intro-imgbox">
+                                    <img src="./imgs/seoul.png" alt="서울 현대미술과 이미지">
+
+                                </div>
+                            </div>    
+                        </li>
                     </ul>
                 </div>      
             </section>
