--- a/index.html
+++ b/index.html
@@ -301,10 +301,7 @@
                                         </li>
                                     </ul>
                                 </div>
-                                <div class="intro-imgbox">
-                                    <img src="./imgs/seoul.png" alt="서울 현대미술과 이미지">
-
-                                </div>
+                                <img src="./imgs/seoul.png" alt="서울 현대미술과 이미지" class="intro-img">
                             </div>    
                         </li>
                         <li>
@@ -334,10 +331,7 @@
                                         </li>
                                     </ul>
                                 </div>
-                                <div class="intro-imgbox">
-                                    <img src="./imgs/seoul.png" alt="서울 현대미술과 이미지">
-
-                                </div>
+                                <img src="./imgs/seoul.png" alt="서울 현대미술과 이미지" class="intro-img">
                             </div>    
                         </li>
                         <li>
@@ -367,10 +361,7 @@
                                         </li>
                                     </ul>
                                 </div>
-                                <div class="intro-imgbox">
-                                    <img src="./imgs/seoul.png" alt="서울 현대미술과 이미지">
-
-                                </div>
+                                <img src="./imgs/seoul.png" alt="서울 현대미술과 이미지" class="intro-img">
                             </div>    
                         </li>
                         <li>
@@ -400,10 +391,7 @@
                                         </li>
                                     </ul>
                                 </div>
-                                <div class="intro-imgbox">
-                                    <img src="./imgs/seoul.png" alt="서울 현대미술과 이미지">
-
-                                </div>
+                                <img src="./imgs/seoul.png" alt="서울 현대미술과 이미지" class="intro-img">
                             </div>    
                         </li>
                     </ul>
