--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <title>국립현대미술관</title>
     <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" href="./css/main.css">
+    <link rel="stylesheet" media="screen and (max-width:1200px)" href="./css/main_1200.css">
+    <link rel="stylesheet" media="screen and (max-width:1000px)" href="./css/main_1000.css">
+    <link rel="stylesheet" media="screen and (max-width:800px)" href="./css/main_800.css">
+    <link rel="stylesheet" media="screen and (max-width:480px)" href="./css/main_480.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
@@ -174,6 +178,7 @@
                                 <p>2023.04.27-2023.09.10</p>
                                 <div class="img-box">
                                     <img src="./imgs/slider-1.png" alt="젊은 모색 2023 : 미술관을 위한 주석"  class="slideimg">
+
                                 </div>
                             </div>
                         </li>
@@ -641,7 +646,8 @@
                                             MMCA VR | Episode 5 | 장욱진의 소우주
                                         </h4>
                                     </div>
-                                    <img src="./imgs/digitalmmca1.png" alt="장욱진의 소우주">
+                                    <img class="playicon" src="./imgs/playicon.svg" alt="장욱진의 소우주 재생">
+                                    <img class="thumbnail" src="./imgs/digitalmmca1.png" alt="장욱진의 소우주">
 
                                 </a>
                             </li>
@@ -655,7 +661,8 @@
 
                                         </h4>
                                     </div>
-                                    <img src="./imgs/digitolmmca2.png" alt="백투더퓨처 한국현대비술 탐험기 유튜브">
+                                    <img class="playicon" src="./imgs/playicon.svg" alt="백투더퓨처 재생">
+                                    <img class="thumbnail" src="./imgs/digitolmmca2.png" alt="백투더퓨처 한국현대비술 탐험기 유튜브">
 
                                 </a>
                             </li>
@@ -667,7 +674,8 @@
                                             [오늘, 이 작품] 김구림| 음과 양| 2023
                                         </h4>
                                     </div>
-                                    <img src="./imgs/digitolmmca3.png" alt="김구림 음과양 유튜브">
+                                    <img class="playicon" src="./imgs/playicon.svg" alt="김구림 음과양 재생">
+                                    <img class="thumbnail" src="./imgs/digitolmmca3.png" alt="김구림 음과양 유튜브">
 
                                 </a>
                             </li>
